--- a/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
+++ b/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNet.SignalR.Core, Version=2.4.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -119,6 +121,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="Bitbird.Core.Backend.DevTools.ModelGenerator.Net.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
