--- a/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.csproj
+++ b/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <NeutralLanguage>en</NeutralLanguage>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
 </Project>
