--- a/Bitbird.Core.Api/Bitbird.Core.Api.csproj
+++ b/Bitbird.Core.Api/Bitbird.Core.Api.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
+    <AssemblyName>Bitbird.Core.Api</AssemblyName>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>Contains base classes and functionality for api projects as .NET Standard library.</Description>
   </PropertyGroup>
 
   <Import Project="..\SharedProperties.props" />
