--- a/Bitbird.Core.Data.NetCore/Bitbird.Core.Data.NetCore.csproj
+++ b/Bitbird.Core.Data.NetCore/Bitbird.Core.Data.NetCore.csproj
@@ -1,10 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
+    <AssemblyName>Bitbird.Core.Data.NetCore</AssemblyName>
     <PackageId>Bitbird.Core.Data.NetCore</PackageId>
     <RootNamespace>Bitbird.Core.Data</RootNamespace>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>Provides .NET Core specific functionality of the Bitbird.Core.Data library.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
