--- a/Bitbird.Core.Data/Bitbird.Core.Data.csproj
+++ b/Bitbird.Core.Data/Bitbird.Core.Data.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
+    <AssemblyName>Bitbird.Core.Data</AssemblyName>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>Provides base classes and functionality for writing entity framework based data access layers as .NET Standard library.</Description>
   </PropertyGroup>
 
   <ItemGroup>
