--- a/Bitbird.Core.Json/Bitbird.Core.Json.csproj
+++ b/Bitbird.Core.Json/Bitbird.Core.Json.csproj
@@ -1,21 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
+    <AssemblyName>Bitbird.Core.Json</AssemblyName>
+    <LangVersion>latest</LangVersion>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>Provides JSON-API functionality as .NET Standard library.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DebugType>pdbonly</DebugType>
-    <DebugSymbols>true</DebugSymbols>
-    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core.Json\Bitbird.Core.Json.xml</DocumentationFile>
-    <WarningLevel>4</WarningLevel>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core.Json\Bitbird.Core.Json.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
