--- a/Bitbird.Core.NetCore/Bitbird.Core.NetCore.csproj
+++ b/Bitbird.Core.NetCore/Bitbird.Core.NetCore.csproj
@@ -1,7 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
+    <AssemblyName>Bitbird.Core.NetCore</AssemblyName>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>Provides .NET Core specific functionality of the Bitbird.Core library.</Description>
+    <RootNamespace>Bitbird.Core</RootNamespace>
   </PropertyGroup>
 
   <Import Project="..\SharedProperties.props" />
