--- a/Bitbird.Core.Tests/Bitbird.Core.Tests.csproj
+++ b/Bitbird.Core.Tests/Bitbird.Core.Tests.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
 
     <IsPackable>false</IsPackable>
+
+    <NeutralLanguage>en</NeutralLanguage>
+
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
