--- a/Bitbird.Core/Bitbird.Core.csproj
+++ b/Bitbird.Core/Bitbird.Core.csproj
@@ -1,18 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <LangVersion>7.3</LangVersion>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <LangVersion>latest</LangVersion>
+    <AssemblyName>Bitbird.Core</AssemblyName>
+    <NeutralLanguage>en</NeutralLanguage>
+    <Description>Contains shared core functionality that many Bitbird.Core projects build upon as .NET Standard library.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core\Bitbird.Core.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DocumentationFile>C:\Users\FlorianSchober\Source\Repos\bitbird-dev\Bitbird.Core\Bitbird.Core\Bitbird.Core.xml</DocumentationFile>
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
