--- a/Bitbird.Core.Data/Bitbird.Core.Data.csproj
+++ b/Bitbird.Core.Data/Bitbird.Core.Data.csproj
@@ -10,6 +10,14 @@
     <Description>Provides base classes and functionality for writing entity framework based data access layers as .NET Standard library.</Description>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
