--- a/Bitbird.Core.Api.net/Bitbird.Core.Api.net.csproj
+++ b/Bitbird.Core.Api.net/Bitbird.Core.Api.net.csproj
@@ -23,7 +23,7 @@
     <WarningLevel>4</WarningLevel>
     <LangVersion>latest</LangVersion>
     <DocumentationFile>bin\Debug\Bitbird.Core.Api.Net.xml</DocumentationFile>
-    <NoWarn>1591</NoWarn>
+    <NoWarn>1591;CS1591</NoWarn>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,7 +34,7 @@
     <WarningLevel>4</WarningLevel>
     <LangVersion>latest</LangVersion>
     <DocumentationFile>bin\Release\Bitbird.Core.Api.Net.xml</DocumentationFile>
-    <NoWarn>1591</NoWarn>
+    <NoWarn>1591;CS1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CommonMark, Version=0.1.0.0, Culture=neutral, PublicKeyToken=001ef8810438905d, processorArchitecture=MSIL">
