--- a/Bitbird.Core.Api/Bitbird.Core.Api.csproj
+++ b/Bitbird.Core.Api/Bitbird.Core.Api.csproj
@@ -10,6 +10,14 @@
     <Description>Contains base classes and functionality for api projects as .NET Standard library.</Description>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
   <Import Project="..\SharedProperties.props" />
 
   <ItemGroup>
