--- a/Bitbird.Core.Ide.Tools.Doc.DotNet/Bitbird.Core.Ide.Tools.Doc.DotNet.csproj
+++ b/Bitbird.Core.Ide.Tools.Doc.DotNet/Bitbird.Core.Ide.Tools.Doc.DotNet.csproj
@@ -33,6 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>latest</LangVersion>
+    <NoWarn>CS1591</NoWarn>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
