--- a/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.csproj
+++ b/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.csproj
@@ -6,4 +6,12 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
 </Project>
