--- a/Bitbird.Core.NetCore/Bitbird.Core.NetCore.csproj
+++ b/Bitbird.Core.NetCore/Bitbird.Core.NetCore.csproj
@@ -11,6 +11,14 @@
     <RootNamespace>Bitbird.Core</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;CS1591</NoWarn>
+  </PropertyGroup>
+
   <Import Project="..\SharedProperties.props" />
 
   <ItemGroup>
