--- a/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.nuspec
+++ b/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.nuspec
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2013/05/nuspec.xsd">
   <metadata minClientVersion="3.6">
-    <id>
-      Core.Ide.Tools.ReferenceSwitcher</id>
+    <id>Bitbird.Core.Ide.Tools.ReferenceSwitcher</id>
     <version>1.0.3</version>
     <title>Reference Switcher (Bitbird.Core)</title>
     <authors>Bitbird GmbH</authors>
