--- a/Bitbird.Core.Ide.Tools.Api.CliTools/Properties/launchSettings.json
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "Bitbird.Core.Ide.Tools.Api.CliTools": {
-      "commandName": "Project",
-      "commandLineArgs": "-Export -ExportInputBin \"C:\\Users\\FlorianSchober\\source\\repos\\Bitbird IoT Functions Prototype\\Bitbird.Iot.Backend.Data\\bin\\Debug\\netcoreapp2.2\\Bitbird.Iot.Backend.Data.dll\""
+      "commandName": "Project"
     }
   }
 }
