--- a/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore.nuspec
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore.nuspec
@@ -1,16 +1,16 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>$id$</id>
     <version>$version$</version>
-    <title>$title$</title>
-    <authors>$author$</authors>
-    <owners>$author$</owners>
+    <title>$id$</title>
+    <authors>$authors$</authors>
+    <owners>$authors$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <copyright>$copyright$</copyright>
   </metadata>
   <files>
-    <file src="bin\$configuration$\**$id$*" target="lib\net472" />
+    <file src="bin\$configuration$\**" target="bin"/>
   </files>
 </package>
