moved nuget package generation to post-build, added script to publish packages locally, updated to 1.2.37

--- a/Bitbird.Core.Ide.Tools.Api.CliTools.Net/Bitbird.Core.Ide.Tools.Api.CliTools.Net.csproj
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools.Net/Bitbird.Core.Ide.Tools.Api.CliTools.Net.csproj
@@ -98,4 +98,9 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF "$(ConfigurationName)"=="Release" (
+  nuget pack "$(ProjectPath)" -OutputDirectory "$(ProjectDir)bin\$(ConfigurationName)" -Properties configuration="$(ConfigurationName)"
+)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
