--- a/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
+++ b/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
@@ -134,4 +134,9 @@
     <Content Include="Scripts\jquery.signalR-2.4.1.min.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF "$(ConfigurationName)"=="Release" (
+  nuget pack "$(ProjectPath)" -OutputDirectory "$(ProjectDir)bin\$(ConfigurationName)" -Properties configuration="$(ConfigurationName)"
+)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
