--- a/Bitbird.Core.Data.Net/Bitbird.Core.Data.Net.csproj
+++ b/Bitbird.Core.Data.Net/Bitbird.Core.Data.Net.csproj
@@ -98,4 +98,9 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF "$(ConfigurationName)"=="Release" (
+  nuget pack "$(ProjectPath)" -OutputDirectory "$(ProjectDir)bin\$(ConfigurationName)" -Properties configuration="$(ConfigurationName)"
+)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
