--- a/Bitbird.Core.Ide.Tools.Doc.DotNet/Bitbird.Core.Ide.Tools.Doc.DotNet.csproj
+++ b/Bitbird.Core.Ide.Tools.Doc.DotNet/Bitbird.Core.Ide.Tools.Doc.DotNet.csproj
@@ -133,4 +133,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>IF "$(ConfigurationName)"=="Release" (
+  nuget pack "$(ProjectDir)$(ProjectName).nuspec" -OutputDirectory "$(ProjectDir)bin\$(ConfigurationName)" -Properties configuration="$(ConfigurationName)"
+)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
