--- a/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.csproj
+++ b/Bitbird.Core.Ide.Tools.ReferenceSwitcher/Bitbird.Core.Ide.Tools.ReferenceSwitcher.csproj
@@ -14,4 +14,8 @@
     <NoWarn>1701;1702;CS1591</NoWarn>
   </PropertyGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="IF &quot;$(ConfigurationName)&quot;==&quot;Release&quot; (&#xD;&#xA;  nuget pack &quot;$(ProjectDir)$(ProjectName).nuspec&quot; -OutputDirectory &quot;$(ProjectDir)bin\$(ConfigurationName)&quot; -Properties configuration=&quot;$(ConfigurationName)&quot;&#xD;&#xA;)" />
+  </Target>
+
 </Project>
