--- a/Bitbird.Core.Ide.Tools.Api.CliTools/Bitbird.Core.Ide.Tools.Api.CliTools.csproj
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools/Bitbird.Core.Ide.Tools.Api.CliTools.csproj
@@ -25,6 +25,12 @@
   <Import Project="..\SharedProperties.props" />
 
   <ItemGroup>
+    <Compile Remove="publish\**" />
+    <EmbeddedResource Remove="publish\**" />
+    <None Remove="publish\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0" />
