--- a/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore.csproj
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore.csproj
@@ -14,12 +14,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>1701;1702;1591;CS1591</NoWarn>
+    <NoWarn>1701;1702;1591;CS1591;NU1608</NoWarn>
     <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>1701;1702;1591;CS1591</NoWarn>
+    <NoWarn>1701;1702;1591;CS1591;NU1608</NoWarn>
     <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
