rudimentary working apimodelserializer, added various base classes for .net core azure functions

--- a/Bitbird.Core.Ide.Tools.Api.CliTools/Bitbird.Core.Ide.Tools.Api.CliTools.csproj
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools/Bitbird.Core.Ide.Tools.Api.CliTools.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Bitbird.Core.Api\Bitbird.Core.Api.csproj" />
     <ProjectReference Include="..\Bitbird.Core.Data\Bitbird.Core.Data.csproj" />
     <ProjectReference Include="..\Bitbird.Core\Bitbird.Core.csproj" />
   </ItemGroup>
