--- a/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Properties/launchSettings.json
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Bitbird.Core.Ide.Tools.Api.CliTools.NetCore": {
       "commandName": "Project",
-      "commandLineArgs": "-Export -ExportInputBinPath \"C:\\Users\\FlorianSchober\\source\\repos\\Bitbird IoT Functions Prototype\\Bitbird.Iot.Backend.Data\\bin\\Debug\\netcoreapp2.2\\Bitbird.Iot.Backend.Data.dll\" -ExportOutput \"dataModel.json\""
+      "commandLineArgs": "-ApiExport -ApiExportInputBinPath \"C:\\Users\\FlorianSchober\\source\\repos\\Bitbird IoT Functions Prototype\\Bitbird.Iot.Backend.Api\\bin\\Debug\\netcoreapp2.2\\Bitbird.Iot.Backend.Api.dll\""
     }
   }
 }
