--- a/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore.nuspec
+++ b/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore/Bitbird.Core.Ide.Tools.Api.CliTools.NetCore.nuspec
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>$id$</id>
-    <version>$version$</version>
-    <title>$id$</title>
-    <authors>$authors$</authors>
-    <owners>$authors$</owners>
+    <id>$ProjectName$</id>
+    <version>$VersionPrefix$$VersionPostfix$</version>
+    <title>$Id$</title>
+    <authors>$Authors$</authors>
+    <owners>$Authors$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>$description$</description>
-    <copyright>$copyright$</copyright>
+    <description>$Description$</description>
+    <copyright>$Copyright$</copyright>
   </metadata>
   <files>
     <file src="publish\**" target="bin"/>
