--- a/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
+++ b/Bitbird.Core.Backend.DevTools.ModelGenerator.Net/Bitbird.Core.Backend.DevTools.ModelGenerator.Net.csproj
@@ -125,11 +125,15 @@
     <None Include="app.config" />
     <None Include="Bitbird.Core.Backend.DevTools.ModelGenerator.Net.nuspec" />
     <None Include="packages.config" />
+    <None Include="Scripts\jquery-3.4.1.min.map" />
+    <None Include="Scripts\jquery-3.4.1.slim.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.6.4.js" />
-    <Content Include="Scripts\jquery-1.6.4.min.js" />
+    <Content Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\jquery-3.4.1.js" />
+    <Content Include="Scripts\jquery-3.4.1.min.js" />
+    <Content Include="Scripts\jquery-3.4.1.slim.js" />
+    <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\jquery.signalR-2.4.1.js" />
     <Content Include="Scripts\jquery.signalR-2.4.1.min.js" />
   </ItemGroup>
