--- a/Bitbird.Core.NetCore/Bitbird.Core.NetCore.csproj
+++ b/Bitbird.Core.NetCore/Bitbird.Core.NetCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;netcoreapp2.1</TargetFrameworks>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>latest</LangVersion>
@@ -9,6 +9,7 @@
     <NeutralLanguage>en</NeutralLanguage>
     <Description>Provides .NET Core specific functionality of the Bitbird.Core library.</Description>
     <RootNamespace>Bitbird.Core</RootNamespace>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
